<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Secure Messaging</string>
    <string name="contacts_title">Contacts</string>
    <string name="settings_title">Settings</string>
    <string name="identity_title">My Identity</string>
    <string name="add_contact">Add</string>
    <string name="verified">verified</string>
    <string name="unverified">unverified</string>
    <color name="verified_color">#477814</color>
    <color name="unverified_color">#E49D24</color>

    <string name="active_username">John Doe</string>
    <string name="active_usercode">ak41&#8211;vmak&#8211;krs2&#8211;6xmm&#8211;gmla</string>
    <string name="unknown">unknown</string>
    <color name="unknown_color">#ff0000</color>
    <string name="message_placeholder">Type your message here.</string>
    <string name="send_text">Send</string>
    <string name="back_text">Back</string>
    <string name="contact_picker_title">Pick A Contact</string>
    <string name="new_conversation">New</string>
    <string name="conversations_title">Inbox</string>
    <string name="dialog_add_contact_title">Add Contact</string>
    <string name="verified_checkbox">I know this user</string>
    <string name="name_hint">Full Name</string>
    <string name="username_hint">Username</string>
    <string name="save_text">Save</string>
    <string name="delete_text">Delete Contact</string>    
    <string name="edit_contact_title">Edit Contact</string>
    <color name="error_background">#ff7070</color>
    <color name="error_foreground">#ff0000</color>
    <string name="invalid_name">* Invalid Name</string>
    <string name="conflict_name">* You already have a contact by this name.</string>
    <string name="remove_messages">Remove all messages from this user?</string>
    <string-array name="dialog_add_contact_menu">
        <item >Add By Barcode</item>
        <item >Add Manually</item>
    </string-array>
    <string name="dialog_modify_contact_title">Modify %s</string>
    <string-array name="dialog_modify_contact_menu">
        <item >Edit Contact</item>
        <item >Delete Contact</item>
    </string-array>
    <string name="add_contact_title">Add Contact</string>
    <string name="dialog_delete_contact_message">Are you sure you want to delete &quot;%s&quot;?</string>
    <string name="dialog_delete_conversation_message">Are you sure you want to delete this conversation? You cannot undo this action.</string>
    <string name="dialog_delete_conversation_title">Delete Conversation</string>
    <string name="dialog_modify_conversation_title">Modify Conversation</string>
    <string name="dialog_delete_contact_title">Delete Contact</string>
    <string name="contact_picker_empty">Nobody To Add</string>
    <string name="contacts_empty">No Contacts</string>
    <string name="conversation_empty">No Messages</string>
    <string name="inbox_empty">No Conversations</string>
    <color name="faded_text">#777777</color>
    <string-array name="dialog_set_photo_menu">
        <item >Browse</item>
        <item >Take Picture</item>
        <item >Clear Photo</item>
    </string-array>
    <string-array name="dialog_modify_conversation_menu">
        <item >Delete</item>
    </string-array>
    <string name="dialog_set_photo_title">Set Photo</string>
    <string name="dialog_edit_conversation">Edit Conversation</string>
    <string name="create">Create</string>
    <string name="dialog_add_request_id_hint">Enter User\'s ID</string>
    <string name="password_prompt">Password&#8230;</string>
    <string name="login_help">Enter your password to access your secure messages.</string>
    <string name="password_confirm">Confirm Password&#8230;</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="register_help">Enter your name and a password.</string>
    <string name="setup_title">Setup</string>
    <string name="login_title">Login</string>
    <string name="password_mismatch">* Passwords Don\'t Match</string>
    <string name="password_required_length">* Password must be 12 characters.</string>
    <string name="login">Login</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="name_label">Change Name:</string>
    <string name="change_password_label">Change Password:</string>
    <string name="reset">Reset</string>
    <string-array name="dialog_modify_conversation_menu">
        <item >Add to Contacts</item>
        <item >Remove from Conversation</item>
    </string-array>
</resources>